Fix issue #532 Twitter/X domain name change

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.ar.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.ar.resx
@@ -307,7 +307,7 @@
     <value>تحميل صور</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>تحميل ملفات الفيديو (tumblr/twitter النفس استضافت)</value>
+    <value>تحميل ملفات الفيديو (Tumblr/X النفس استضافت)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>حجم الفيديو (بكسل)</value>
