--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.he.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.he.resx
@@ -307,7 +307,7 @@
     <value>הורד תמונות</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>קטעי וידאו להורדה (tumblr/twitter עצמית מתארח)</value>
+    <value>קטעי וידאו להורדה (Tumblr/X עצמית מתארח)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>גודל סרטון (px)</value>
