--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.hi.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.hi.resx
@@ -307,7 +307,7 @@
     <value>चित्र डाउनलोड करें</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>डाउनलोड वीडियो (tumblr/twitter स्व की मेजबानी)</value>
+    <value>डाउनलोड वीडियो (Tumblr/X स्व की मेजबानी)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>वीडियो आकार (पीएक्स)</value>
