--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.pa.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.pa.resx
@@ -307,7 +307,7 @@
     <value>ਤਸਵੀਰਾਂ ਡਾਊਨਲੋਡ ਕਰੋ</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>ਵੀਡਿਓ ਡਾਊਨਲੋਡ ਕਰੋ (tumblr/twitter ਸਵੈ-ਮੇਜ਼ਬਾਨੀ ਕੀਤੀ ਗਈ)</value>
+    <value>ਵੀਡਿਓ ਡਾਊਨਲੋਡ ਕਰੋ (Tumblr/X ਸਵੈ-ਮੇਜ਼ਬਾਨੀ ਕੀਤੀ ਗਈ)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>ਵੀਡੀਓ ਅਕਾਰ (ਪੈਕਸ)</value>
