--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.ko.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.ko.resx
@@ -307,7 +307,7 @@
     <value>이미지 다운로드</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>다운로드 비디오 (tumblr/twitter 자기 호스팅)</value>
+    <value>다운로드 비디오 (Tumblr/X 자기 호스팅)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>동영상 크기 (픽셀)</value>
