Fix issue #549 Show a message if DownloadFrom/-To value of a crawler is in wrong format

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -507,4 +507,7 @@ Trotzdem fortfahren und schließen?</value>
   <data name="NotLoggedInX" xml:space="preserve">
     <value>Sie müssen sich bei x.com anmelden zum Laden von {0}. Dazu in den Einstellungen-&gt;Authentifizieren klicken.</value>
   </data>
+  <data name="BlogValueHasWrongFormat" xml:space="preserve">
+    <value>Ein auf der Detailseite eingegebener Wert hat das falsche Format.</value>
+  </data>
 </root>
