Fix issue #546 Prevent multiple instances with same download location
- If multiple instances with same download location are run, unpredictable things (e.g. blog file corruptions) can happen.
- In each main download location a running.lock file is hold during execution. So it's OK to run multiple portable versions with different download locations, but not multiple times the normal version.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -510,4 +510,7 @@ Trotzdem fortfahren und schließen?</value>
   <data name="BlogValueHasWrongFormat" xml:space="preserve">
     <value>Ein auf der Detailseite eingegebener Wert hat das falsche Format.</value>
   </data>
+  <data name="InstanceAlreadyRunning" xml:space="preserve">
+    <value>Eine Instanz für diesen Download-Speicherort wird bereits ausgeführt!</value>
+  </data>
 </root>
