Add #531 New option to save texts in individual files
- Before all downloaded texts were saved together in e.g. texts.txt.
- Now when the new option is enabled the post's text is saved in a separate file.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -1026,4 +1026,14 @@ Die zur Authentifizierung verwendeten Cookies werden gespeichert und der Authent
   <data name="ToolTipFreeDiskSpaceMonitorInterval" xml:space="preserve">
     <value>Intervall für die Überprüfung des freien Speicherplatzes</value>
   </data>
+  <data name="SaveTextsIndividualFiles" xml:space="preserve">
+    <value>Texte in einzelnen Dateien speichern</value>
+  </data>
+  <data name="ToolTipSaveTextsIndividualFiles" xml:space="preserve">
+    <value>Speichern der Texte in einzelnen Dateien statt in einer</value>
+  </data>
+  <data name="ToolTipSaveTextsIndividualFilesDescription" xml:space="preserve">
+    <value>Speichert die heruntergeladenen Texte in einzelnen Dateien statt in einer Datei (z. B. texts.txt).
+Diese Option ergänzt die Option(en) „Texte herunterladen“ und funktioniert nicht unabhängig.</value>
+  </data>
 </root>
